tests/neg/warn-value-discard.check
-- [E175] Potential Issue Error: tests/neg/warn-value-discard.scala:27:36 ----------------------------------------------
27 |    mutable.Set.empty[String].remove("") // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |    discarded non-Unit value of type Boolean
-- [E175] Potential Issue Error: tests/neg/warn-value-discard.scala:39:41 ----------------------------------------------
39 |    mutable.Set.empty[String].subtractOne("") // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |    discarded non-Unit value of type scala.collection.mutable.Set[String]
-- [E175] Potential Issue Error: tests/neg/warn-value-discard.scala:59:4 -----------------------------------------------
59 |    mutable.Set.empty[String] += "" // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |    discarded non-Unit value of type scala.collection.mutable.Set[String]
-- [E175] Potential Issue Error: tests/neg/warn-value-discard.scala:15:35 ----------------------------------------------
15 |  firstThing().map(_ => secondThing()) // error
   |                        ^^^^^^^^^^^^^
   |                        discarded non-Unit value of type Either[Failed, Unit]
-- [E175] Potential Issue Error: tests/neg/warn-value-discard.scala:18:35 ----------------------------------------------
18 |  firstThing().map(_ => secondThing()) // error
   |                        ^^^^^^^^^^^^^
   |                        discarded non-Unit value of type Either[Failed, Unit]
